# ats-2026-plab-tema3

./: .env.example  README.md  pyproject.toml  rubrica_niveles.md
docs/: DECISIONS.md  IA_REPORT.md  demo.md
src/: config.py  n1_semantic_search.py
